--- a/src/index.html
+++ b/src/index.html
@@ -137,8 +137,8 @@
     <div class="container">
         <h1>Portada del Proyecto</h1>
         <div class="info" style="text-align: center;">
-            <p><label>Materia:</label> Seminrario de Programación en Internet I</p>
-            <p><label>Profesor:</label>Annibal Jose Cab Sainas</p>
+            <p><label>Materia:</label> Seminario de Programación en Internet I</p>
+            <p><label>Profesor:</label>Annibal Jose Cab Salinas</p>
             <p><label>Grupo:</label> 2802</p>
             <p><label>Periodo:</label> 2024-1</p>
         </div>
@@ -149,7 +149,8 @@
                 <li>Mauricio Nicolas Adame</li>
                 <li>Miguel Anguel Valdez</li>
                 <li>Jahir Muñoz Hernandez</li>
-                <li>Mora Alan</li>
+                <li>Lopez Mora Victor Alan</li>
+                <li>Castellanos Romero Isaac Andre</li>
                 <!-- Añadir más integrantes según sea necesario -->
             </ul>
         </div>
