--- a/src/index.html
+++ b/src/index.html
@@ -212,6 +212,7 @@ print "Hola mundo PERL";
     <!-- Tabla de 3x3 con diferentes estilos -->
     <div class="table-container">
         <table class="table" id="myTable">
+            <h2>Matriz 3x3</h2>
             <tr>
                 <td style="background-color: #ffcccc;">1</td>
                 <td style="background-color: #ccffcc;">2</td>
