--- a/src/index.html
+++ b/src/index.html
@@ -147,10 +147,10 @@
             <ul>
                 <!-- Espacio para nombres de integrantes -->
                 <li>Mauricio Nicolas Adame</li>
-                <li>Miguel Anguel Valdez</li>
+                <li>Miguel Angel Valdez Bautista</li>
                 <li>Jahir Muñoz Hernandez</li>
-                <li>Lopez Mora Victor Alan</li>
-                <li>Castellanos Romero Isaac Andre</li>
+                <li>Victor Alan Lopez Mora </li>
+                <li>Isaac Andre Castellanos Romero</li>
                 <!-- Añadir más integrantes según sea necesario -->
             </ul>
         </div>
